# sasshadow-community

./: .dockerignore  .env.example  .gitignore  BLACK-HAT-DEMO.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  THIRD_PARTY_DISCLOSURE.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  run-saasshadow-community-demo.sh  run-saasshadow-demo.bat  run-saasshadow-demo.sh  start.bat  start.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
app/: main.py  schemas.py  schemas_dashboard.py
app/analysis/: __init__.py  api_detector.py  integration_mapper.py  ispm_classifier.py  risk_graph.py
app/analyzers/: __init__.py  ai_integrations.py  credential_exposure.py
app/api/: connectors.py  dashboard.py  ispm.py  routes.py  scan.py  scans.py
data/: sample_integrations.json
demo/: README.md  sample_integration.json
docs/: ARCHITECTURE.md  CONNECTORS.md  INTEGRATION_GUIDE.md  ISPM.md  PLUGINS.md
frontend/: .dockerignore  .env.example  BUILD-PERFORMANCE.md  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
samples/: artifact_families_dataset.json
scripts/: community_smoke.py  run_sample_dataset.py  seed_demo_integrations.py
tests/: _score_test.py  conftest.py  test_api.py  test_api_detector.py  test_artifact_analyzers.py  test_core_risk_engine.py  test_credential_exposure.py  test_edition_community.py  test_enterprise_risk.py  test_ispm_classifier.py  test_pipeline.py  test_plugins.py  test_real_world_integrations.py  test_rules.py  test_saas_services.py
(+134 files in other folders)
