[project]
name = "saasshadow-community"
version = "0.1.0"
description = "SaaSShadow Community Edition: open-source SaaS-to-SaaS integration risk monitoring with OAuth scope analysis, API token misuse detection, credential exposure scanning, and executive reporting."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# F841 (unused locals) and E741 (ambiguous name "l") are tolerated in the
# inherited analyzer / report code; F401 (unused imports) stays enforced.
ignore = ["F841", "E741"]
